# X2E-Reference-Sensor-LoRa-lib

./: CMakeLists.txt  Kconfig  README.md
mac/: LoRaMac.c  LoRaMac.h  LoRaMacClassB.c  LoRaMacConfirmQueue.c  LoRaMacCrypto.c  LoRaMacCrypto.h  LoRaMacMessageTypes.h  LoRaMacSerializer.c  LoRaMacSerializer.h  LoRaMac_debug.c  LoRaMac_debug.h  readme.txt
mac/region/: Region.c  Region.h  RegionCommon.c
mac/region/AS923/: RegionAS923.c  RegionAS923.h
mac/region/CN470/: RegionCN470.c  RegionCN470.h
mac/region/EU868/: RegionEU868.c
mac/region/ISM2400/: RegionISM2400.c  RegionISM2400.h
mac/region/KR920/: RegionKR920.c  RegionKR920.h
mac/region/RU864/: RegionRU864.h
mac/region/US915/: RegionUS915.c
main/: LoRaCompon_debug.c  LoRaCompon_debug.h  LoRa_debug.c  LoRa_debug.h  dev_provision.c  dev_provision.h  ecdh.c  ecdh.h  lora_compon.c  lora_compon.h  lora_crc.c  lora_crc.h  lora_data.c  lora_data.h  lora_mutex_helper.h
platform/: LoRaPlatform_debug.c  LoRaPlatform_debug.h  board.c  board.h  delay.c  delay.h  rtc-board.c  rtc-board.h  systime.c  systime.h  timer.c  timer.h  utilities.c  utilities.h
radio/: LoRaRadio_debug.c  LoRaRadio_debug.h  RangingCorrection.h  radio.c  radio.h  radio_sx126x.c  radio_sx1280.c  sx-gpio.h  sx126x-hal.c  sx126x-hal.h  sx126x.c  sx126x.h  sx1280-hal.c  sx1280-hal.h  sx1280.c  sx1280.h
radio/rangingCorrection/: rangingCorrectionSF10BW0400.h  rangingCorrectionSF10BW0800.h  rangingCorrectionSF10BW1600.h  rangingCorrectionSF5BW0400.h  rangingCorrectionSF5BW0800.h  rangingCorrectionSF5BW1600.h  rangingCorrectionSF6BW0400.h  rangingCorrectionSF6BW0800.h  rangingCorrectionSF6BW1600.h  rangingCorrectionSF7BW0400.h  rangingCorrectionSF7BW0800.h  rangingCorrectionSF7BW1600.h  rangingCorrectionSF8BW0400.h  rangingCorrectionSF8BW0800.h  rangingCorrectionSF8BW1600.h  rangingCorrectionSF9BW0400.h  rangingCorrectionSF9BW0800.h  rangingCorrectionSF9BW1600.h  rangingCorrection_defines.h
sec/: aes.c  aes.h  cmac.c  cmac.h  se-identity.h  soft-se-hal.c  soft-se-hal.h  soft-se.c
